Add real-time update for interface